# codex

./: .gitignore  PROGRESS.md  README.md  STYLE.md
c/: ieee.c  (+6 more)
rust/: Cargo.toml  ROADMAP.md  STYLE.md  argparse.rs  cargo.md
rust/basics/: Cargo.toml
rust/basics/src/: array_example.rs  casting.rs  conditions.rs  data_types.rs  environment.rs  functions.rs  input.rs  lifetimes.rs  loops.rs  main.rs  matching.rs  option_result.rs  ownership.rs  panic.rs  printing.rs  random.rs  string_example.rs  time.rs  variables.rs
rust/collections/: Cargo.toml
rust/collections/src/: binary_heap.rs  btreemap.rs  btreeset.rs  deques.rs  hashmaps.rs  hashsets.rs  main.rs  vectors.rs
rust/concurrency/: Cargo.toml
rust/concurrency/src/: async_basics.rs  channels.rs  main.rs  patterns.rs  rayon_parallel.rs  shared_state.rs  threads.rs  tokio_channels.rs  tokio_runtime.rs
rust/error_handling/: Cargo.toml
rust/error_handling/src/: anyhow_example.rs  custom_errors.rs  error_conversion.rs  error_trait.rs  main.rs  propagation.rs  thiserror_example.rs
rust/io_filesystem/: Cargo.toml
rust/io_filesystem/src/: advanced.rs  directories.rs  file_io.rs  main.rs  paths.rs  process.rs  stdio.rs
rust/iterators/: Cargo.toml
rust/iterators/src/: adapters.rs  advanced.rs  basics.rs  consumers.rs  custom_iterators.rs  main.rs  patterns.rs
rust/macros/: Cargo.toml
rust/notes/: Index.md
rust/oop_concepts/: Cargo.toml
rust/serde_examples/: Cargo.toml
rust/shared/: Cargo.toml
rust/smart_pointers/: Cargo.toml
rust/testing/: Cargo.toml
rust/unsafe_rust/: Cargo.toml  build.rs
(+364 files in other folders)
